# youtube-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml  test.yml
examples/: metadata.rs  pingpong.rs
src/: api.rs  auth.rs  error.rs  lib.rs  token.rs  youtube_dl.rs
src/api/: auth.rs  mod.rs
src/models/: error.rs  metadata.rs  mod.rs  snippet.rs
src/models/livebroadcasts/: mod.rs  request.rs  response.rs
src/models/playlists/: request.rs  response.rs
src/models/search/: mod.rs  request.rs  response.rs
