[package]
name = "youtube"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.6"
reqwest = { version = "0.10", features = ["json"] }
oauth2 = { version = "3.0.0-alpha.9", default-features = false, features = ["reqwest-010", "futures-03"] }
log = "0.4"
regex = "1.3"
lazy_static = "1.4"
tokio = { version = "0.2", features = ["fs", "process"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
