[package]
name = "youtube-api"
version = "0.1.2"
license = "GPL-3.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
keywords = ["youtube", "api", "client", "youtube-dl"]
repository = "https://github.com/maxjoehnk/youtube-rs"
description = "Async Youtube API implementation in Rust"
edition = "2021"
categories = ["api-bindings", "multimedia::video"]

[badges]
travis-ci = { repository = "maxjoehnk/youtube-rs", branch = "master" }

[features]
default = ["readonly"]
post = ["readonly"]
readonly = []

[dependencies]
failure = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.6"
reqwest = { version = "0.11", features = ["json"] }
oauth2 = "4.0.0-beta.1"
log = "0.4"
tokio = { version = "1", features = ["fs", "process"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
