[package]
name = "youtube-api"
version = "0.1.2"
license = "GPL-3.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
keywords = ["youtube", "api", "client", "youtube-dl"]
repository = "https://github.com/maxjoehnk/youtube-rs"
description = "Async Youtube API implementation in Rust"
edition = "2021"
categories = ["api-bindings", "multimedia::video"]

[badges]
travis-ci = { repository = "maxjoehnk/youtube-rs", branch = "master" }

[dependencies]
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.78"
serde_urlencoded = "0.7.1"
reqwest = { version = "0.11.9", features = ["json"] }
oauth2 = "4.1.0"
log = "0.4.14"
tokio = { version = "1.15.0", features = ["fs", "process"] }
anyhow = "1.0.53"

[dev-dependencies]
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }
